--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@ text-decoration:none;
 </div>
 <div>
 <img src="images/white.jpg"width="284px"height="300px"alt="white">
-<h2><a href="
-https://ananthssa.github.io/task-02/"target="_blank">task-02</h2>
+<h2><a href="https://ananthssa.github.io/task-02/"target="_blank">task-02</h2>
 </div>
 <div>
 <img src="images/ben10.jpg"width="284"height="300px"alt="ben10">
